# Gosh-USB-Creator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-linux-arm.yml  build-linux.yml  build-macos.yml  build-windows.yml  release.yml
src/: App.svelte  main.ts  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: devices.rs  mod.rs  verify.rs  write.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/utils/: progress.rs
src/components/: App.css  App.tsx  DeviceList.css  DeviceList.tsx  ISOSelector.css  ISOSelector.tsx  ModeToggle.css  ModeToggle.tsx  ProgressBar.css  ProgressBar.tsx  Settings.css  Settings.tsx  VerificationPanel.css  VerificationPanel.tsx
src/context/: AppContext.tsx
src/lib/: types.ts
src/lib/components/: DeviceList.svelte  ISOSelector.svelte  ModeToggle.svelte  ProgressBar.svelte  Settings.svelte  VerificationPanel.svelte
src/lib/stores/: app.svelte.ts
src/styles/: global.css  variables.css
src/types/: index.ts
