[package]
name = "gosh-usb-creator"
version = "0.1.0"
description = "Cross-platform USB flash drive creator"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "gosh_usb_creator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
