[package]
name = "gosh-usb-creator"
version = "1.1.1"
description = "Cross-platform USB flash drive creator"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0"

[lib]
name = "gosh_usb_creator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
